package main

// Vehiculo es la estructura principal
type Vehiculo struct {
    Marca string
}