package main

// Moto es otra subestructura de Vehiculo
type Moto struct {
    Vehiculo
    Cilindrada int
}
